--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,7 @@
     "/>
     <script src="json2.js"></script>
   </head> 
-  <body bgcolor="black" height="100%" width="100%"> 
+  <body bgcolor="#404040" height="100%" width="100%"> 
     <canvas id="c" width="100%" height="100%" style="-webkit-tap-highlight-color: transparent;"></canvas> 
     <script>
 var canvas = document.getElementById('c');
@@ -61,7 +61,7 @@ function prepEntity(entity) {
 function clearFrame() {
     with(context) {
 	moveTo(0,0);
-	fillStyle = "#000";
+	fillStyle = "#404040";
 	fillRect(0,0,W,H);
     }
 
@@ -251,7 +251,6 @@ mouse.mouseuppers.push(function(x,y,clicked,e) {
 function update() {
     fetch("/world").then((response) => {
         response.json().then((data) => {
-            console.log(world)
             world = data;
             drawNext = true;
         });
